--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "es5": "check-es-version -e 5 -s true",
     "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://registry.npmjs.com/' --access public"
   },
+  "dependencies": {
+    "js-cookie": "^3.0.5"
+  },
   "peerDependencies": {
     "@babel/runtime": "^7.23.6",
-    "@haixing_hu/clone": "^1.11.1",
-    "@haixing_hu/common-util": "^5.1.0",
-    "@haixing_hu/common-validation-rule": "^1.2.1",
-    "@haixing_hu/naming-style": "^1.3.0"
+    "@haixing_hu/json": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -57,15 +57,10 @@
     "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/runtime": "^7.23.6",
-    "@haixing_hu/clone": "^1.11.1",
-    "@haixing_hu/common-util": "^5.1.0",
-    "@haixing_hu/common-validation-rule": "^1.2.1",
     "@haixing_hu/eslint-config": "^1.3.3",
     "@haixing_hu/jsdoc-minami": "^1.5.1",
-    "@haixing_hu/naming-style": "^1.3.0",
+    "@haixing_hu/json": "^1.0.3",
     "@haixing_hu/rollup-builder": "^1.6.5",
-    "@haixing_hu/type-detect": "^1.1.0",
-    "@haixing_hu/typeinfo": "^3.0.0",
     "@jest/core": "^29.7.0",
     "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
