--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haixing_hu/storage",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A JavaScript library providing wrapper objects for Web storages.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -17,18 +17,19 @@
     "utility",
     "webapp"
   ],
-  "main": "dist/storage.cjs.min.js",
-  "module": "dist/storage.esm.min.mjs",
+  "main": "dist/storage.min.cjs",
+  "module": "dist/storage.min.mjs",
   "exports": {
     ".": {
-      "require": "./dist/storage.cjs.min.js",
-      "import": "./dist/storage.esm.min.mjs"
+      "require": "./dist/storage.min.cjs",
+      "import": "./dist/storage.min.mjs"
     }
   },
   "sideEffects": false,
   "files": [
     "dist/**/*",
     "doc/**/*",
+    "src/**/*",
     "LICENSE",
     "README.md",
     "README.zh_CN.md"
@@ -44,10 +45,12 @@
     "es5": "check-es-version -e 5 -s true",
     "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://registry.npmjs.com/' --access public"
   },
+  "dependencies": {
+    "js-cookie": "^3.0.5"
+  },
   "peerDependencies": {
     "@babel/runtime": "^7.23.6",
-    "@haixing_hu/json": "^1.0.3",
-    "js-cookie": "^3.0.5"
+    "@haixing_hu/json": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -57,8 +60,8 @@
     "@babel/runtime": "^7.23.6",
     "@haixing_hu/eslint-config": "^1.3.3",
     "@haixing_hu/jsdoc-minami": "^1.5.1",
-    "@haixing_hu/json": "^1.0.3",
-    "@haixing_hu/rollup-builder": "^1.6.5",
+    "@haixing_hu/json": "^1.1.0",
+    "@haixing_hu/rollup-builder": "^1.8.2",
     "@jest/core": "^29.7.0",
     "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -81,5 +84,5 @@
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0"
   },
-  "packageManager": "yarn@4.0.0"
+  "packageManager": "yarn@4.5.0"
 }
