--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@haixing_hu/storage",
-  "version": "1.3.2",
+  "name": "@qubit-ltd/storage",
+  "version": "1.3.3",
   "description": "A JavaScript library providing wrapper objects for Web storages.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -50,7 +50,7 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.26.0",
-    "@haixing_hu/json": "^1.1.3"
+    "@qubit-ltd/json": "^1.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -58,16 +58,16 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "@babel/runtime": "^7.26.0",
-    "@haixing_hu/eslint-config": "^1.3.3",
-    "@haixing_hu/jsdoc-minami": "^1.5.1",
-    "@haixing_hu/json": "^1.1.3",
-    "@haixing_hu/rollup-builder": "^1.8.3",
     "@jest/core": "^29.7.0",
+    "@qubit-ltd/eslint-config": "^1.3.4",
+    "@qubit-ltd/jsdoc-minami": "^1.5.2",
+    "@qubit-ltd/json": "^1.1.4",
+    "@qubit-ltd/rollup-builder": "^1.8.7",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
     "babel-plugin-transform-object-hasown": "^1.1.0",
     "check-es-version": "^1.5.0",
@@ -80,9 +80,9 @@
     "jest-environment-jsdom-global": "^4.0.0",
     "jest-extended": "^4.0.2",
     "jsdoc": "^4.0.4",
-    "rollup": "^4.28.1",
+    "rollup": "^4.29.2",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "rollup-plugin-visualizer": "^5.13.1"
   },
   "packageManager": "yarn@4.5.0"
 }
