--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lint": "eslint ./src",
     "doc": "jsdoc -c jsdoc.json",
     "es5": "check-es-version -e 5 -s true",
-    "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://registry.npmjs.com/' --access public"
+    "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://npm.qubit.ltd/' --access public"
   },
   "dependencies": {
     "js-cookie": "^3.0.5"
